tests/baselines/reference/parserAccessibilityAfterStatic5(strict=true).errors.txt
parserAccessibilityAfterStatic5.ts(3,8): error TS7008: Member 'public' implicitly has an 'any' type.


==== parserAccessibilityAfterStatic5.ts (1 errors) ====
    class Outer
    {
    static public
           ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
    }
    